# kds-team.processor-rename-files

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
scripts/: build_n_test.sh
src/: component.py
tests/: test_component.py  test_functional.py
tests/functional/CFT-3066-fix-manifest-handling/source/data/: config.json
tests/functional/CFT-3066-fix-manifest-handling/source/data/in/tables/: FHSFZSALES_D.csv  FHSFZSALES_D.csv.manifest
tests/functional/add_timestamp/source/data/: config.json
tests/functional/add_timestamp/source/data/in/files/: report_#567_#20200101.csv.manifest
tests/functional/basic_multi_replace/source/data/: config.json
tests/functional/basic_tables_direction_new_manifest/source/data/: config.json
tests/functional/capture_group/source/data/: config.json
tests/functional/capture_group_single_foldered/source/data/: config.json
tests/functional/capture_group_single_foldered/source/data/in/tables/: in.c-keboola-ex-adwords-v201809-3601490.campaigns.csv
tests/functional/replace_context_functions/source/data/: config.json
tests/functional/to_uppercase/source/data/: config.json
